# pwntools

./: CHANGELOG.md  CONTRIBUTING.md  TESTING.md  mypy-baseline.txt  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  ci.yml  docker.yml  lint.yml  merge-conflict.yml  pylint.yml
docs/: requirements.txt
docs/source/: atexception.rst  conf.py  filepointer.rst  filesystem.rst  index.rst  intro.rst  libc.rst
docs/source/install/: binutils.rst
docs/source/libc/: glibc.rst
examples/exit-handlers/: exploit.py  vulnerable  vulnerable.c
extra/docker/base/: Dockerfile
extra/zsh_completion/: _pwn
pwn/: __init__.py  toplevel.py
pwnlib/: abi.py  args.py  asm.py  atexception.py  atexit.py  config.py  device.py  dynelf.py  exception.py  filepointer.py  fmtstr.py  gdb.py  gdb_api_bridge.py  gdb_faketerminal.py  lexer.py  libcdb.py  log.py  memleak.py  qemu.py  regsort.py  replacements.py  runner.py  testexample.py  timeout.py  ui.py  update.py  useragents.py  version.py  windbg.py
pwnlib/adb/: __init__.py  adb.py  bootimg.py  bootloader.py
pwnlib/commandline/: asm.py  checksec.py  constgrep.py  cyclic.py  debug.py  disablenx.py  disasm.py  elfdiff.py  elfpatch.py  errno.py  hex.py  libcdb.py  main.py  phd.py  pwnstrip.py  scramble.py  shellcraft.py  template.py  unhex.py  update.py  version.py
pwnlib/constants/: __init__.py
pwnlib/context/: __init__.py
pwnlib/data/: __init__.py
pwnlib/data/elf/: __init__.py
pwnlib/data/includes/generator/: load_constants.py
pwnlib/data/syscalls/: generate.py
pwnlib/data/templates/: pwnup.mako
pwnlib/data/useragents/: download-useragents.py
pwnlib/elf/: __init__.py  config.py  corefile.py  datatypes.py  elf.py  maps.py  plt.py
pwnlib/encoders/: __init__.py  encoder.py
pwnlib/encoders/amd64/: __init__.py  delta.py
pwnlib/encoders/arm/: __init__.py  xor.py
pwnlib/encoders/arm/alphanumeric/: ARM_Instructions.py  __init__.py  alphanum_byte.py  builder.py  random_funcs.py
pwnlib/encoders/i386/: __init__.py  ascii_shellcode.py  delta.py  xor.py
pwnlib/encoders/mips/: __init__.py  xor.py
pwnlib/filesystem/: __init__.py  ssh.py
pwnlib/flag/: __init__.py  flag.py
pwnlib/internal/: dochelper.py  typing.py
pwnlib/libc/: __init__.py  glibc.py
pwnlib/protocols/adb/: __init__.py
pwnlib/rop/: call.py  gadgets.py  ret2csu.py  ret2dlresolve.py  rop.py  srop.py
pwnlib/shellcraft/: __init__.py  internal.py  registers.py
pwnlib/shellcraft/templates/amd64/: mov.asm  setregs.asm
pwnlib/shellcraft/templates/amd64/windows/: getexport.asm  getprocaddress.asm
pwnlib/shellcraft/templates/i386/: function.asm  mov.asm  setregs.asm
pwnlib/shellcraft/templates/loongarch64/: mov.asm  pushstr.asm  setregs.asm
pwnlib/shellcraft/templates/loongarch64/linux/: syscall.asm
pwnlib/term/: __init__.py  completer.py  key.py  keymap.py  readline.py  spinners.py  term.py  text.py  unix_termcap.py  windows_termcap.py
pwnlib/tubes/: __init__.py  buffer.py  listen.py  process.py  remote.py  serialtube.py  server.py  sock.py  ssh.py  tube.py
pwnlib/util/: __init__.py  cyclic.py  fiddling.py  getdents.py  hashes.py  iters.py  lists.py  misc.py  net.py  packing.py  proc.py  safeeval.py  sh_string.py  splash.py  web.py
pwnlib/util/crc/: __init__.py  known.py
travis/: libcdb_nginx_cache.conf  test_nginx_cache.sh
travis/docker/: Dockerfile  Dockerfile.travis  ipython_config.py
